--- a/index.html
+++ b/index.html
@@ -1,82 +1,74 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>SNEAKER SHOP</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-</head>
-<body>
-<div class="container">
-  <div class="row">
-    <div class="col-12 text-center">
-      <h2>SNEAKER SHOP</h2>
+<html lang="en" data-bs-theme="dark">
+   <title> SNEAKER SHOP </title>
+   <head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+   </head>
+   <body> 
+    <div class="container">
+        <div class="row">
+            <div class="col-12 text-center">
+               <h2> SNEAKER SHOP </h2>
+                <hr class="hr" />
+                </div>
+            </div>
+        </div>
+            <div class="container">
+            <div class="row">
+                <div class="col-4 text-center">
+                    <label id="product1"> AIR JORDAN I </label>
+                    <img src="p1.jpg" style="width: 500px;height: 300px;" class="img-thumbnail"/><br>
+                    <label for="product1" id="price1">30,000</label>
+                    <input type="number" class="form-control" id="qty1" placeholder="Enter quantity"/><br>
+                </div>
+                <div class="col-4 text-center">
+                        <label id="product2"> AIR JORDAN II </label>
+                        <img src="p2.jpg" style="width:500px;height: 300px;" class="img-thumbnail"/><br>
+                        <label for="product2" id="price2">35,000</label>
+                        <input type="number" class="form-control" id="qty2" placeholder="Enter quantity"/><br>
+                </div>
+               <div class="col-4 text-center">
+                        <label id="product3"> AIR JORDAN III  </label>
+                        <img src="p3.jpg" style="width:500px;height: 300px;" class="img-thumbnail"/><br>
+                        <label for="product3" id="price3">32,000</label>
+                        <input type="number" class="form-control" id="qty3" placeholder="Enter quantity"/><br>
+                </div>
+               <div class="col-4 text-center">
+                        <label id="product4"> AIR JORDAN IV  </label>
+                        <img src="p4.webp" style="width:500px;height: 300px;" class="img-thumbnail"/><br>
+                        <label for="product4" id="price4">36,000</label>
+                        <input type="number" class="form-control" id="qty4" placeholder="Enter quantity"/><br>
+                </div>
+               <div class="col-4 text-center">
+                        <label id="product5"> AIR JORDAN V  </label>
+                        <img src="p5.jpg" style="width:500px;height: 300px;" class="img-thumbnail"/><br>
+                        <label for="product5" id="price5">30,000</label>
+                        <input type="number" class="form-control" id="qty5" placeholder="Enter quantity"/><br>
+                </div>
+               <div class="col-4 text-center">
+                        <label id="product6"> AIR JORDAN VI  </label>
+                        <img src="p6.jpg" style="width:500px;height: 300px;" class="img-thumbnail"/><br>
+                        <label for="product6" id="price6">34,000</label>
+                        <input type="number" class="form-control" id="qty6" placeholder="Enter quantity"/><br>
+                </div>
+                <div class="col-4">
+                        <label for="carts"> Orders </label><br>
+                        <textarea class="form-control" rows="29" id="carts" cols="200" readonly style="width: 350px;height: 400px;font-size: 12px;"></textarea>
+                        <input type="text" class="form-control border-0" id="total" readonly placeholder="Total"/>
+                        <input type="number" class="form-control" id="cash" placeholder="Cash Tendered"/>
+                        <input type="text" class="form-control border-0" id="change" readonly placeholder="Change"/>
+                        
+                </div>
+            </div>
+        </div>
+<script src="index.js"></script>
+     <br><br>
+       <div class="card text-center">
+      <div class="card-footer text-body-secondary">
+        <div class="badge text-bg-info">Info</div>
       
-      <hr class="hr" />
     </div>
-  </div>
-  
-  <div class="row">
-    <div class="col-4 text-center">
-      <label id="product1">Air jordan I</label>
-      <img src="p1.jpg" style="width:400px; height:500px;" class="img-thumbnail"/>
-      <label for="product1" id="price1">30000.00</label>
-      <input type="number" class="form-control" id="qty1" placeholder="Enter quantity"/>
     </div>
-  
-    <div class="col-4 text-center">
-      <label id="product2">Air Jordan II</label>
-      <img src="p2.jpg" style="width:400px; height:500px;" class="img-thumbnail"/>
-      <label for="product2" id="price2">35000.00</label>
-      <input type="number" class="form-control" id="qty2" placeholder="Enter quantity"/>
-    </div>
-  
-    <div class="col-4 text-center">
-      <label id="product3">Air Jordan III</label>
-      <img src="p3.jpg" style="width:400px; height:500px;" class="img-thumbnail"/>
-      <label for="product3" id="price3">32000.00</label>
-      <input type="number" class="form-control" id="qty3" placeholder="Enter quantity"/>
-    </div>
-
-    <div class="col-4 text-center">
-      <label id="product4">Air Jordan IV</label>
-      <img src="p4.webp" style="width:400px; height:500px;" class="img-thumbnail"/>
-      <label for="product4" id="price4">36000.00</label>
-      <input type="number" class="form-control" id="qty4" placeholder="Enter quantity"/>
-    </div>
-
-    <div class="col-4 text-center">
-      <label id="product5">Air Jordan V </label>
-      <img src="p5.jpg" style="width:400px; height:500px;" class="img-thumbnail"/>
-      <label for="product5" id="price5">30000.00</label>
-      <input type="number" class="form-control" id="qty5" placeholder="Enter quantity"/>
-    </div>
-
-    <div class="col-4 text-center">
-      <label id="product6">Air Jordan VI</label>
-      <img src="p6.jpg" style="width:400px; height:500px;" class="img-thumbnail"/>
-      <label for="product6" id="price6">34000.00</label>
-      <input type="number" class="form-control" id="qty6" placeholder="Enter quantity"/>
-    </div>
-
-    <div class="col-4 text-center">
-      <label id="product7">Air Jordan VII</label>
-      <img src="p7.jpg" style="width:400px; height:500px;" class="img-thumbnail"/>
-      <label for="product7" id="price7">32000.00</label>
-      <input type="number" class="form-control" id="qty7" placeholder="Enter quantity"/>
-    </div>
-
-    <div class="col-4">
-      <label for="carts">Orders</label>
-      <textarea class="form-control" rows="29" id="carts" cols="200" readonly style="width:350px; height:400px; font-size:12px;"></textarea>
-      <input type="text" class="form-control border-0" id="total" readonly placeholder="Total"/>
-      <input type="number" class="form-control" id="cash" placeholder="Cash Tendered"/>
-      <input type="text" class="form-control border-0" id="change" readonly placeholder="Change"/>
-    </div>
-  </div>
-</div>
-<script src="app.js"></script>
 </body>
 </html>
