--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div class="container">
         <div class="row">
             <div class="col-12 text-center">
-               <h2> SNEAKER SHOP </h2>
+                <h2>SNEAKER SHOP</h2>
                 <hr class="hr" />
                 </div>
             </div>
@@ -17,40 +17,46 @@
             <div class="container">
             <div class="row">
                 <div class="col-4 text-center">
-                    <label id="product1"> AIR JORDAN I </label>
+                    <label id="product1"> AIR JORDAN I</label>
                     <img src="p1.jpg" style="width: 500px;height: 300px;" class="img-thumbnail"/><br>
-                    <label for="product1" id="price1">30,000</label>
+                    <label for="product1" id="price1">27000.00</label>
                     <input type="number" class="form-control" id="qty1" placeholder="Enter quantity"/><br>
                 </div>
                 <div class="col-4 text-center">
-                        <label id="product2"> AIR JORDAN II </label>
+                        <label id="product2"> AIR JORDAN II</label>
                         <img src="p2.jpg" style="width:500px;height: 300px;" class="img-thumbnail"/><br>
-                        <label for="product2" id="price2">35,000</label>
+                        <label for="product2" id="price2">37000.00</label>
                         <input type="number" class="form-control" id="qty2" placeholder="Enter quantity"/><br>
                 </div>
-               <div class="col-4 text-center">
-                        <label id="product3"> AIR JORDAN III  </label>
-                        <img src="p3.jpg" style="width:500px;height: 300px;" class="img-thumbnail"/><br>
-                        <label for="product3" id="price3">32,000</label>
-                        <input type="number" class="form-control" id="qty3" placeholder="Enter quantity"/><br>
+                <div class="col-4 text-center">
+                		<label id="product3"> AIR JORDAN</label>
+                		<img src="p3.jpg" style="width: 500px;height: 300px;" class="img-thumbnail"/><br>
+                		<label for="product3" id="price3">27000.00</label>
+                		<input type="number" class="form-control" id="qty3" placeholder="Enter quantity"/><br>
                 </div>
-               <div class="col-4 text-center">
-                        <label id="product4"> AIR JORDAN IV  </label>
-                        <img src="p4.webp" style="width:500px;height: 300px;" class="img-thumbnail"/><br>
-                        <label for="product4" id="price4">36,000</label>
-                        <input type="number" class="form-control" id="qty4" placeholder="Enter quantity"/><br>
+                <div class="col-4 text-center">
+                		<label id="product4"> AIR JORDAN IV</label>
+                		<img src="aa.webp" style="width: 500px;height: 300px;" class="img-thumbnail"/><br>
+                		<label for="product4" id="price4">27000.00</label>
+                =		<input type="number" class="form-control" id="qty4" placeholder="Enter quantity"/><br>
                 </div>
-               <div class="col-4 text-center">
-                        <label id="product5"> AIR JORDAN V  </label>
-                        <img src="p5.jpg" style="width:500px;height: 300px;" class="img-thumbnail"/><br>
-                        <label for="product5" id="price5">30,000</label>
-                        <input type="number" class="form-control" id="qty5" placeholder="Enter quantity"/><br>
+                <div class="col-4 text-center">
+                		<label id="product5"> AIR JORDAN V</label>
+                		<img src="p5.jpg" style="width: 500px;height: 300px;" class="img-thumbnail"/><br>
+                		<label for="product5" id="price5">27000.00</label>
+                		<input type="number" class="form-control" id="qty5" placeholder="Enter quantity"/><br>
                 </div>
-               <div class="col-4 text-center">
-                        <label id="product6"> AIR JORDAN VI  </label>
-                        <img src="p6.jpg" style="width:500px;height: 300px;" class="img-thumbnail"/><br>
-                        <label for="product6" id="price6">34,000</label>
-                        <input type="number" class="form-control" id="qty6" placeholder="Enter quantity"/><br>
+                		<div class="col-4 text-center">
+                		<label id="product6"> AIR JORDAN VI</label>
+                		<img src="p6.jpg" style="width: 500px;height: 300px;" class="img-thumbnail"/><br>
+                		<label for="product6" id="price6">27000.00</label>
+                		<input type="number" class="form-control" id="qty6" placeholder="Enter quantity"/><br>
+                </div>
+                <div class="col-4 text-center">
+                		<label id="product7"> AIR JORDAN VII</label>
+                		<img src="p7.jpg" style="width: 500px;height: 300px;" class="img-thumbnail"/><br>
+                		<label for="product7" id="price7">27000.00</label>
+                		<input type="number" class="form-control" id="qty7" placeholder="Enter quantity"/><br>
                 </div>
                 <div class="col-4">
                         <label for="carts"> Orders </label><br>
@@ -66,9 +72,8 @@
      <br><br>
        <div class="card text-center">
       <div class="card-footer text-body-secondary">
-        <div class="badge text-bg-info">Info</div>
-      
+      Owned by: John Peter B. Cardeño
     </div>
     </div>
-</body>
+   </bod>
 </html>
