--- a/index.html
+++ b/index.html
@@ -22,49 +22,49 @@
     <div class="col-4 text-center">
       <label id="product1">AIR JORDAN  I</label>
       <img src="p1.jpg" style="width:400px; height:500px;" class="img-thumbnail"/>
-      <label for="product1" id="price1">30000.00</label>
+      <label for="AIR JORDAN I" id="price1">30000.00</label>
       <input type="number" class="form-control" id="qty1" placeholder="Enter quantity"/>
     </div>
   
     <div class="col-4 text-center">
       <label id="product2">AIR JORDAN II</label>
       <img src="p2.jpg" style="width:400px; height:500px;" class="img-thumbnail"/>
-      <label for="product2" id="price2">35000.00</label>
+      <label for="AIR JORDAN II" id="price2">35000.00</label>
       <input type="number" class="form-control" id="qty2" placeholder="Enter quantity"/>
     </div>
   
     <div class="col-4 text-center">
       <label id="product3">AIR JORDAN  III</label>
       <img src="p3.jpg" style="width:400px; height:500px;" class="img-thumbnail"/>
-      <label for="product3" id="price3">32000.00</label>
+      <label for="AIR JORDAN III" id="price3">32000.00</label>
       <input type="number" class="form-control" id="qty3" placeholder="Enter quantity"/>
     </div>
 
     <div class="col-4 text-center">
       <label id="product4">AIR JORDAN  IV</label>
       <img src="p4.webp" style="width:400px; height:500px;" class="img-thumbnail"/>
-      <label for="product4" id="price4">36000.00</label>
+      <label for="AIR JORDAN IV" id="price4">36000.00</label>
       <input type="number" class="form-control" id="qty4" placeholder="Enter quantity"/>
     </div>
 
     <div class="col-4 text-center">
       <label id="product5">AIR JORDAN  V</label>
       <img src="p5.jpg" style="width:400px; height:500px;" class="img-thumbnail"/>
-      <label for="product5" id="price5">30000.00</label>
+      <label for="AIR JORDAN V" id="price5">30000.00</label>
       <input type="number" class="form-control" id="qty5" placeholder="Enter quantity"/>
     </div>
 
     <div class="col-4 text-center">
       <label id="product6">AIR JORDAN  VI</label>
       <img src="p6.jpg" style="width:400px; height:500px;" class="img-thumbnail"/>
-      <label for="product6" id="price6">34000.00</label>
+      <label for="AIR JORDAN VI" id="price6">34000.00</label>
       <input type="number" class="form-control" id="qty6" placeholder="Enter quantity"/>
     </div>
 
     <div class="col-4 text-center">
       <label id="product7">AIR JORDAN  VII</label>
       <img src="p7.jpg" style="width:400px; height:500px;" class="img-thumbnail"/>
-      <label for="product7" id="price7">32000.00</label>
+      <label for="AIR JORDAN VII" id="price7">32000.00</label>
       <input type="number" class="form-control" id="qty7" placeholder="Enter quantity"/>
     </div>
 
